# Traingo-custom

./: .gitignore  README.md  pyproject.toml  run.bat
srtgo/: srtgo.py
