[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "traingo-custom"
authors = [
    {name = "Shiloh944"},
]
description = "Personal SRT/KTX reservation helper based on srtgo"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT License"}
version = "2.2.3+custom.1"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "click",
    "curl_cffi",
    "requests",
    "inquirer>=3.4",
    "keyring",
    "PyCryptodome",
    "prompt_toolkit>=3",
    "python-telegram-bot",
    "termcolor"
]

[project.urls]
Homepage = "https://github.com/Shiloh944/Traingo-custom"

[project.scripts]
srtgo = "srtgo.srtgo:srtgo"
